--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ googleAnalytics = ""
   # Nav links in the side bar
   [[params.navlinks]]
   name = "Posts"
-  url = "portfolio/"
+  url = "posts/"
   home = true
 
 
